# arkiv-project

./: .gitignore  AGENTS.md  LICENSE  PROMPTS.md  README.md  START_HERE.md  pyproject.toml  wallet.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
src/arkiv_starter/: 01_hello_world.py  02_accounts.py  03_clients.py  04_entity_crud.py  05_queries.py  06_events.py  07_agents.py  08_web3_integration.py  __init__.py
src/loadtest/: README.md  __init__.py  arkiv_user.py  demo.py  locustfile.py
src/tictactoe/: README.md  __init__.py  __main__.py  arkiv_game.py  game.py
tests/: conftest.py  test_03_clients.py  test_04_entity_crud.py  test_05_queries.py  test_utilities.py
