[project]
name = "arkiv-starter"
version = "0.1.0"
description = "Starter template for Arkiv Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arkiv-sdk[dev]>=1.0.0a10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arkiv_starter"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
